objects/vlocity_ins__GroupClass__c.object
<CustomObject>
    <description>Group Class identifies a group of members that will all receive similar benefits, when different classes of members receive different benefits. Example classes may include Executives, Union and Office workers. Master-detail child object of an Employer/Group Account.</description>
    <fields>
        <fullName>vlocity_ins__ClassCode__c</fullName>
        <label>Class Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DependentEmployerContributionAmount__c</fullName>
        <label>Dependent Employer Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DependentEmployerContributionPercent__c</fullName>
        <label>Dependent Employer Contribution  %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>End date from which group class or group class location is no longer available.</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>Start date from which group class or group class location is effective.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmployerContributionAmount__c</fullName>
        <label>Employer Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmployerContributionPercent__c</fullName>
        <label>Employer Contribution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupId__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Classes</relationshipLabel>
        <relationshipName>Group_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupName__c</fullName>
        <description>Name of group associated with group class.</description>
        <formula>vlocity_ins__GroupId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentGroupClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent group class. Used for large group locations.</description>
        <label>Parent Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Group Classes</relationshipLabel>
        <relationshipName>ChildGroupClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Class</label>
    <nameField>
        <label>Group Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>